# task-tracker-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  init.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2023022653_create_user_table_6e6233c47a99.py
src/: conftest.py  initial_data.py  main.py
src/api/: api.py  deps.py  models.py
src/api/endpoints/: auth.py  users.py
src/core/: config.py  security.py  session.py
src/tests/: conftest.py  test_auth.py  test_users.py
