[tool.poetry]
name = "task-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Danis Idiatullin <i.danis.idiatullin@gmail.com>"]
readme = "README.md"
packages = [{include = "task_tracker_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.5"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
sqlalchemy-stubs = "^0.4"
types-passlib = "^1.7.7.10"


[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.0"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/tests",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylama]
format = "pylint,pycodestyle"
max_line_length = 120
skip = "*/.tox/*,*/.env/*"
linters = "mccabe,pycodestyle,pyflakes,isort"
paths = "src"

[tool.mypy]
plugins = ["sqlmypy"]
files = "src"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
