[tool.poetry]
name = "task-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Danis Idiatullin <i.danis.idiatullin@gmail.com>"]
readme = "README.md"
packages = [{include = "task_tracker_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}
python-multipart = "^0.0.5"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
asyncpg = "^0.27.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.5"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}



[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.1"
black = "^23.1.0"
coverage = "^7.2.0"
flake8 = "^6.0.0"
httpx = "^0.23.3"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
filterwarnings = []
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["app/tests"]

[tool.isort]
profile = "black"
